manifests/metallb/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metallb-controller
  namespace: metallb-system
  labels:
    app: metallb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metallb
      component: controller
  template:
    metadata:
      labels:
        app: metallb
        component: controller
    spec:
      containers:
        - name: controller
          image: quay.io/metallb/controller:v0.13.12
          args:
            - --port=7472
          ports:
            - containerPort: 7472
