manifests/metallb/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: metallb-webhook-configuration
webhooks:
  - name: metallb-webhook-validate-addresspool
    clientConfig:
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-addresspool
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTFNRGN4T0RFek1UUTBORm9YRFRNMU1EY3hOakUwTVRRMApORm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTTJ6eHpCUkJ5VThtS25FN3BHM1kyZkVOeU9FcWZQbXRMNEEKTjJlSnJYTUJ3R1VqRWtVdkJ0VW1kWnZkcVhWLzVwbk56Y09MUUtQQXB4bDVuTFkwK3hHcjl5T085ZGRmbTlNWAowbmdHMFRjbVRo [...]
    rules:
      - apiGroups: ["metallb.io"]
        apiVersions: ["v1beta1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["addresspools"]
    failurePolicy: Fail
    admissionReviewVersions: ["v1"]
# Add more webhooks as needed, each with a unique name
